/***********************************************************************
 X3 ChangeLog

2006-10-12  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: Make lamers not affect users on the userlist above
	inviteme level in the channel. (why kb users who can .uba and
	.inviteme back in?)

2006-10-10  Neil Spierling  <sirvulcan@gmail.com>

	* src/spamserv.c: Ignore those with access (if the options are
	disabled- scanchanops, scanhalfops, scanvoiced.

2006-10-08  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: undid 9/16/06 change of 5 second delay before
	autojoin. Not really a great solution. Instead, move auth_handler
	funcs to be called after stamping etc. thx to Buttaknife for this
	solution.

	* src/nickserv.c: move auth_func calls to after stamping, and
	commented up the cmd_auth source to make it more managable.

2006-10-04  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: remove redundant 'none' from empty llists

2006-10-04  Neil Spierling  <sirvulcan@gmail.com>

	* src/nickserv.c: Fix for bug 1555621. Cookie data will be copied
	over with odelcookie now.

2006-10-04  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Fix for bug 1551717. If automode is set to 0
	in a channel and a user auths in the channel, the user will not
	receive autoop etc if they have it enabled in uset.

2006-10-03  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: Check for connect timer entries before adding new
	ones, hopefully will fix bug 1570408 (pLaYa, let us know)

2006-09-25  Neil Spierling  <sirvulcan@gmail.com>

	* src/modcmd.c: Shortened ThiefMaster to just his nick as per request
	by him.

2006-09-16  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Do autojoin 5 seconds after handle_auth. Seems its
	happening before autohide. Let me know if its still happening before
	autohide.

	* src/chanserv.help: Updated the AUTOJOIN bit.

2006-09-13  Alex Schumann   <rubin@afternet.org>
