@@ -3,6 +3,13 @@
 
 2006-10-12  Alex Schumann   <rubin@afternet.org>
 
+	* src/opserv.c: Added SVSJOIN command, to push a user into a channel,
+	and a TRACE REACTION of SVSJOIN for trace and alerts. Now you can do
+	something like 'trace SVSJOIN chantarget #dronebots nick bot[*'
+	or send all level3 users to a perticular channel on connection, etc.
+
+2006-10-12  Alex Schumann   <rubin@afternet.org>
+
 	* src/chanserv.c: Make lamers not affect users on the userlist above
 	inviteme level in the channel. (why kb users who can .uba and
 	.inviteme back in?)
